syntax = "proto3";

package deposits.v1;

option go_package = "deposits/v1;depositsv1";

message OnboardRequest {
    string name = 1;
}

message OnboardResponse {
    string id = 1;
    string name = 2;
}

service InvestorsService {
    rpc Onboard(OnboardRequest) returns (OnboardResponse) {}
}
